--- a/commands/staff/console/index.html
+++ b/commands/staff/console/index.html
@@ -9,6 +9,6 @@ Hello Staff.
   <ul>
     <li> !gameban [RobloxUsername/RobloxUserId] [time] [reason]
   </li>
-    <li>!gamekick [robloxusername/userid] [reason]</li>
+    <li>!gamekick [RobloxUsername/RobloxUserId] [reason]</li>
   </ul>
 </nav>
