--- a/commands/staff/console/index.html
+++ b/commands/staff/console/index.html
@@ -7,8 +7,46 @@ Hello Staff.
 
 <nav>
   <ul>
-    <li> !gameban [RobloxUsername/RobloxUserId] [time] [reason]
+    <li> !gameban [RobloxUsername/RobloxUserId] <a href="#time">[time]</a> [reason]
   </li>
     <li>!gamekick [RobloxUsername/RobloxUserId] [reason]</li>
   </ul>
 </nav>
+<p>You can copy the first command here as an example</p>
+<code>
+  !gamekick RuleBreaker 1 1d Bye! 
+</code>
+
+
+
+<h1> Time Formatting</h1>
+<div name="time">
+  <nav>
+    <ul>
+      <li>
+        1s = 1 Second
+      </li>
+      <li>
+        60s = 1 Minute
+      </li>
+      <p>Note: for minutes of time you want to do it in seconds. 5 minutes is 360 seconds</p>
+      <li>
+        1h = 1 Hour
+      </li>
+      <li>
+        1d = 1 Day
+      </li>
+      <li>
+        1w = 1 Week
+      </li>
+      <li>
+        1m = 1 Month
+      </li>
+      <li>
+        1y = 1 Year
+      </li>
+      <li>
+        1k = Permanent
+      </li>
+    </ul>
+  </nav>
