--- a/commands/staff/console/index.html
+++ b/commands/staff/console/index.html
@@ -14,7 +14,7 @@ Hello Staff.
 </nav>
 <p>You can copy the first command here as an example</p>
 <code>
-  !gamekick RuleBreaker 1 1d Bye! 
+  !gameban RuleBreaker 1 1d Bye! 
 </code>
 
 
